p2debuglog.txt
 gcc -g p2final.c
p2final.c:9:16: error: unknown type name ‘intb’; did you mean ‘int’?
 int add( int a,intb)
                ^~~~
 
 gcc -g p2final.c
 gdb ./a.out
GNU gdb (Ubuntu 8.1.1-0ubuntu1) 8.1.1
Copyright (C) 2018 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from ./a.out...done.
(gdb) n
The program is not being run.
(gdb) n
The program is not being run.
(gdb) b main
Breakpoint 1 at 0x810: file p2final.c, line 22.
(gdb) r
Starting program: /home/runner/pps-test1-Mubarak-al-21/a.out 
warning: Error disabling address space randomization: Operation not permitted

Breakpoint 1, main () at p2final.c:22
22    a=input();
(gdb) n
enter the value:
n
23    b=input();
(gdb) n
enter the value:
24    sum=add(a,b);
(gdb) n
25    output(a,b,sum);
(gdb) n
the sum of 32707 and 32707 is 65414.
26    return 0;
(gdb) n
27  }(gdb) 